--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,7 @@
     },
     "require": {
         "php": "^8.0",
-        "illuminate/support": "^9.0|^10.0|^11.0"
-    },
-    "require-dev": {
-        "illuminate/console": "^9.0|^10.0|^11.0",
-        "illuminate/config": "^9.0|^10.0|^11.0"
+        "laravel/framework": "^9.0|^10.0|^11.0"
     },
     "autoload": {
         "psr-4": {
